<resources>
    <string name="app_name">James Ouk | NEU CS5520-02 | Spring 2022</string>

    <!-- Assignment 01 -->
    <string name="a01_main_btn">About Me</string>
    <string name="a01_my_info">James Ouk - ouk.j@northeastern.edu</string>

    <!-- Assignment 03 -->
    <string name="a03">Clicky Clicky</string>
    <string name="a03_a">A</string>
    <string name="a03_b">B</string>
    <string name="a03_c">C</string>
    <string name="a03_d">D</string>
    <string name="a03_e">E</string>
    <string name="a03_f">F</string>
    <string name="a03_pressed">Pressed: -</string>

    <!-- Assignment 04 -->
    <string name="a04">Link Collector</string>
    <string name="a04_title">Title</string>
    <string name="a04_url">URL</string>
    <string name="a04_cancel">Cancel</string>
    <string name="a04_add">Add</string>

    <!-- Assignment 05 -->
    <string name="a05">My Coordinates</string>
    <string name="a05_rationale">
        <ul>
            <li>Reads the device\'s last known location once whenever <b>[Display Coordinates]</b> is tapped.</li>
        </ul>
    </string>
    <string name="a05_btn_txt">Display Coordinates</string>
    <string name="a05_denied"><b>[Display Coordinates]</b> is disabled until you give permission to read your location data.</string>
    <string name="a05_required">This feature requires permission to read your location data.</string>
    <string name="a05_ok">Grant Permission</string>
    <string name="a05_latitude">Latitude:</string>
    <string name="a05_longitude">Longitude:</string>
    <string name="a05_timeout">Location request timed out.  Could not determine location within reasonable time.</string>
    <string name="a05_locationOff"><b>[Display Coordinates]</b> will not work unless you turn on Location services.</string>
    <string name="a05_time">Timestamp</string>

    <!-- Assignment 06 -->
    <string name="a06">Web Service</string>
    <string name="a06_btnPingWeb">Show Astronomy Picture of the Day!</string>

</resources>