<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".A04Add">

    <TextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/a04_title"
        android:textColor="@color/night_primary_light"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/label_url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/label_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/a04_url"
        android:textColor="@color/night_primary_light"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="@+id/label_title"
        app:layout_constraintTop_toBottomOf="@+id/label_title" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/a04_title"
        android:inputType="none"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_title"
        app:layout_constraintTop_toTopOf="@+id/label_title"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <!--Setting layout_width=0dp causes the View to expand to fill its constraint space-->
    <EditText
        android:id="@+id/edit_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="https://"
        android:hint="example.com"
        android:inputType="textUri"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_title"
        app:layout_constraintStart_toStartOf="@+id/edit_title"
        app:layout_constraintTop_toTopOf="@+id/label_url"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_cancel"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/a04_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_url"/>

    <Button
        android:id="@+id/btn_add"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a04_add"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>